force-app/main/default/objects/Practitioner__c/Practitioner__c.object-meta.xml
<CustomObject>
    <description>The Practitioner is the person who is delivering the service. Multiple practitioners can deliver a service.</description>
    <label>Practitioner</label>
    <nameField>
        <label>Practitioner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Practitioners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>