force-app/main/default/objects/Practitioner__c/fields/ATSI_Cultural_Training__c.field-meta.xml
<CustomField>
    <fullName>ATSI_Cultural_Training__c</fullName>
    <label>ATSI Cultural Training</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not required</fullName>
            </value>
            <value>
                <fullName>Missing / Not recorded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>