force-app/main/default/objects/Practitioner__c/fields/practitioner_active__c.field-meta.xml
<CustomField>
    <fullName>practitioner_active__c</fullName>
    <label>Active</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>