force-app/main/default/objects/Practitioner__c/fields/practitioner_atsi_status__c.field-meta.xml
<CustomField>
    <fullName>practitioner_atsi_status__c</fullName>
    <label>Practitioner Aboriginal and Torres Strai</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aboriginal but not Torres Strait Islander origin</fullName>
            </value>
            <value>
                <fullName>Torres Strait Islander but not Aboriginal origin</fullName>
            </value>
            <value>
                <fullName>Both Aboriginal and Torres Strait Islander origin</fullName>
            </value>
            <value>
                <fullName>Neither Aboriginal or Torres Strait Islander origin</fullName>
            </value>
            <value>
                <fullName>Not stated/inadequately described</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>