force-app/main/default/objects/Practitioner__c/fields/Practitioner_Category__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_Category__c</fullName>
    <label>Practitioner Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clinical Psychologist</fullName>
            </value>
            <value>
                <fullName>General Psychologist</fullName>
            </value>
            <value>
                <fullName>Social Worker</fullName>
            </value>
            <value>
                <fullName>Occupational Therapist</fullName>
            </value>
            <value>
                <fullName>Mental Health Nurse</fullName>
            </value>
            <value>
                <fullName>Aboriginal and Torres Strait Islander Health/Mental Health Worker</fullName>
            </value>
            <value>
                <fullName>Low Intensity Mental Health Worker</fullName>
            </value>
            <value>
                <fullName>General Practitioner</fullName>
            </value>
            <value>
                <fullName>Psychiatrist</fullName>
            </value>
            <value>
                <fullName>Other Medical</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Psychosocial Support Worker</fullName>
            </value>
            <value>
                <fullName>Peer Support Worker</fullName>
            </value>
            <value>
                <fullName>Not stated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>