force-app/main/default/objects/Practitioner__c/fields/Practitioner_Gender__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_Gender__c</fullName>
    <label>Practitioner Gender</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not stated/Inadequately described</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>