force-app/main/default/objects/Practitioner__c/fields/Practitioner_Key__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_Key__c</fullName>
    <description>A unique identifier for a practitioner within the responsible provider organisation. Assigned by either the PHN or Provider Organisation depending on local procedures.</description>
    <label>Practitioner Key</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>