force-app/main/default/objects/Practitioner__c/fields/Practitioner_Tags__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_Tags__c</fullName>
    <description>List of tags for the practitioner.</description>
    <label>Practitioner Tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>