force-app/main/default/objects/Practitioner__c/fields/practitioner_year_of_birth__c.field-meta.xml
<CustomField>
    <fullName>practitioner_year_of_birth__c</fullName>
    <label>Year of Birth</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>